--- a/style.css
+++ b/style.css
@@ -102,3 +102,9 @@ a {
   justify-content: center;
   align-items: center;
 }
+.card {
+  text-align:center;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+}
